--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "aesthesia",
   "description": "Make your text ａｅｓｔｈｅｔｉｃ",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "permissions": ["contextMenus"],
   "background": {
     "scripts": ["background.js"]
   },
   "content_scripts": [{
-    "matches": ["http://*/*", "https://*/*"],
+    "matches": ["<all_urls>"],
     "js": ["content.js"]
   }],
 
